[tool.poetry]
name = "pdf_chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.7"
tqdm = "^4.67.3"
unstructured = {extras = ["all-docs"], version = "^0.22.18"}
langchain-community = "^0.4.1"
sentence-transformers = "^5.4.0"
langchain-experimental = "^0.4.1"
langchain = "^1.2.15"
psycopg2-binary = "^2.9.11"
pgvector = "^0.4.2"
sqlalchemy = "^2.0.49"
psycopg = {extras = ["binary"], version = "^3.3.3"}
transformers = "^5.5.3"
accelerate = "^1.13.0"
langchain-huggingface = "^1.2.1"
langchain-text-splitters = "^1.1.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
